--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="slideShow">
       <div class="photoHolder">
         <img class="thumbnail" id="photo" src="http://placehold.it/518x389?text=Welcome+to+my+Gallery" alt="Gallery Image"/>
-				<img class="moreIndicator rot90" src="img/more.png" alt="More Content"/>
+				<img class="moreIndicator rot90" src="img/more.png" alt="More Content" onclick="toggleDetails()"/>
       </div>
       <div id="nav">
         <img id="prevPhoto" class='rot180' src="img/arrow.png" alt="Previous Photo"/>
