--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="banner">IS219 Slide Show</p>
     <div id="slideShow">
       <div class="photoHolder">
-        <img class="thumbnail" id="photo" src="img/places/Welcome-1.jpg" alt="Gallery Image"/>
+        <img class="thumbnail" id="photo" src="img/places/Welcome-1.jfif" alt="Gallery Image"/>
 				<img class="moreIndicator rot90" src="img/more.png" alt="More Content" onclick="toggleDetails()"/>
       </div>
       <div id="nav">
